--- a/butterfly/no-framework-css/assets/css/global.css
+++ b/butterfly/no-framework-css/assets/css/global.css
@@ -3,6 +3,7 @@
 	--section-secondary-color: #444444;
 
 	--primary-sky: #49b5e7;
+	--primary-sky-light: #74c9f157;
 	--primary-sky-dark: #1c698c;
 
 	--section-bg-primary-color: #ffff;
